--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "defi-tutorial",
+  "name": "Traxain",
   "version": "0.1.0",
-  "description": "DeFi Token Staking App",
-  "author": "gregory@dappuniversity.com",
+  "description": "Direct Payment Dapp",
+  "author": "ignaciopardobaena@dgmail.com",
+  "main": "truffle-config.js",
+  "directories": {
+    "test": "test"
+  },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.4.3",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -16,6 +21,7 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "identicon.js": "^2.3.3",
+    "moment": "^2.29.1",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-clear-cache": "^1.4.12",
@@ -27,9 +33,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject"
-  
+  },
+  "devDependencies": {
+    "dotenv": "^4.0.0",
+    "truffle-hdwallet-provider": "1.0.17"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +49,4 @@
     "not ie <= 11",
     "not op_mini all"
   ]
-  
 }
-
