--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "identicon.js": "^2.3.3",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-clear-cache": "^1.4.12",
+    "react-datepicker": "^4.2.1",
     "react-dom": "16.8.4",
     "react-scripts": "2.1.3",
     "truffle": "5.1.39",
